# reciper

./: .gitignore  .pre-commit-config.yaml  CODING_STANDARD.docx  Dockerfile  README.md  README_INSTALL.md  environment.yml  json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
.reciper_cache/: cache_metadata.json
docs/: api-reference.md  cli-usage.md  contributing.md  index.md
examples/: README.md
examples/simple_bioinformatics_project/: Dockerfile  analysis.py  dev-requirements.txt  environment.yml  requirements.txt
reciper/: __init__.py  api.py  cache.py  cli.py  command_detector.py  conda_parser.py  conflict_detector.py  constants.py  error_handling.py  generator.py  import_aggregator.py  lockfile_generator.py  mapper.py  parser.py  reporter.py  requirements_parser.py  scanner.py  utils.py  verifier.py
reciper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
reciper/data/: command_mappings.yaml  known_conflicts.yaml  package_mappings.yaml
test_subprocess_project/: Dockerfile  environment.yml  pipeline.py
tests/: test_api.py  test_conflict_detector.py  test_features.py  test_imports.py  test_performance.py  test_recursive_requirements.py
